изменил контроллер(сделал чуть чище), добавил возможность менять пароль, тк он кодируется не понял нужно ли заморачиваться с тем, чтобы поле password было пустое и менялось при вводе/не менялось если не ввели ничего

--- a/src/main/resources/templates/admin/editUserPage.html
+++ b/src/main/resources/templates/admin/editUserPage.html
@@ -29,7 +29,7 @@
     <br/>
     <br/>
     <label for="password">Password:</label>
-    <input type="password" disabled th:field="*{password}" id="password"/>
+    <input type="text" th:field="*{password}" id="password"/>
     <br/>
     <br/>
     <div>
